@startuml
skinparam classAttributeIconSize 0

class Schuelerverwaltung{
 -schueler : Schueler
 -angemeldet : boolean
 + Schuelerverwaltung ()
 + anmeldung() : void
 - anmeldung(pPassword : String) : void
 + abmeldung() : void
 + zeigeMenue() : void
 + getAngemeldet() : boolean
 + getSchueler() : Schueler
}



class MenueFuehrung{
 - sc : Scanner(System.in)

 +MenueFuehrung()
 +erstelleUser() : Schueler
 + anmeldung() : String
 + abmeldung() : void
 + zeigeFaecher(pSchueler : Schueler) : void
 + fachAnlegen() : Fach
 - start() : int
 + noteAnlegen(pSchueler : Schueler) : void
 + noteAbfragen() : pNote
 + zeigeMenue(pSchuelerverwaltung : Schuelerverwaltung) : void
 - breakLine() : void
 }

class Person{
 -vorname: String
 -nachname: String
 -alter : int
 + Person(pVorname : String, pNachname : String, pAlter : int)
 +setVorname(pName : String) : void
 +setNachname(pName : String) : void
 +getVorname() : String
 +getNachname() : String
 +setAlter(pAlter : int) : void
 +getAlter() : int
}



class Fach{
 -name : String
 +Fach(pName : String)
 +gebeAlleNotenAus() : String
 +noteHinzufuegen(pNote : Note) : void
 +getName(): String
 +setName(pName : String) : void
 +toString() : String
}

class Note{
 -note: int
 -jahr : int
 +Note(pNote : int, pJahr : int)
 +getNote(): String
 +setNote(pNote : int) : void
 +getJahr(): String
 +setJahr(pNote : int) : void
 +toString() String
}




class Schueler{
  -passwort : String

  +Schueler(pVorname : String, pNachname : String, pAlter : int, pPassword : String)
  
  +changePassword(pPassword : String) : void
  +ueberpruefePassword(pPassword : String): boolean
  +gebeNotenAus() : void
  + fachAnlegen(pFach : Fach) : void
  +alleFaecherAusgeben() : void
  +alleFachNamenMitNummernAusgeben() : void
  +noteFuerFachAnlegen(pFachID : int, pNote : Note) : void
  -setPassword(pPassword : String) : void
}


Fach "1" *-- "0..10" Note
Schuelerverwaltung  *-- "1" MenueFuehrung
Schueler "1" *-- "0..10" Fach
Schueler <|-- Person

@enduml
